--- a/roles/sap_firewall/tasks/configure_ports.yml
+++ b/roles/sap_firewall/tasks/configure_ports.yml
@@ -13,6 +13,7 @@
   loop: "{{ __sap_firewall_port.tcp | default([]) }}"
   loop_control:
     loop_var: port_list_item
+    label: "Port: {{ port_list_item }}"
   when:
     - __sap_firewall_port.tcp is defined
     - __sap_firewall_port.tcp | length > 0
@@ -30,6 +31,7 @@
   loop: "{{ __sap_firewall_port.udp | default([]) }}"
   loop_control:
     loop_var: port_list_item
+    label: "Port: {{ port_list_item }}"
   when:
     - __sap_firewall_port.udp is defined
     - __sap_firewall_port.udp | length > 0
@@ -55,4 +57,5 @@
       loop: "{{ __sap_firewall_port.service | default([]) }}"
       loop_control:
         loop_var: service_item
+        label: "Service: {{ service_item }}"
       notify: Reload firewalld
